<resources>
    <string name="app_name">Sportspring Referee</string>

    <string name="button_ok_alert_dialog">OK</string>


    <!-- Login activity -->
    <string name="edit_text_hint_login">Login</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="button_login_enter">Enter</string>
    <string name="dialog_no_connection_title">No connection</string>
    <string name="dialog_no_connection_message">Try check your network settings</string>
    <string name="dialog_login_fail_title">Аuthorization fail</string>
    <string name="dialog_login_fail_message">Your login of password is incorrect</string>
    <!-- ============= -->


    <string name="network_error">Network error</string>

    <string name="tournaments_title">My tournaments</string>
    <string name="tournament_dates_interval_pattern" formatted="false">From  %s  to  %s</string>
    <string name="cant_load_rounds">Cant load rounds</string>

    <string name="rounds_title">Rounds</string>
    <string name="cant_load_matches">Cant load matches</string>

    <string name="matches_title">Matches</string>

    <!-- summary fragment -->
    <string name="penalty_score_title">Penalty</string>
    <string name="is_overtime_title">Overtime</string>
    <string name="is_technical_win_title">Technical win</string>
    <string name="match_location_title">Location</string>
    <string name="match_location_hint">Location</string>
    <string name="referee_name_title">Referee</string>
    <string name="referee_name_hint">Referee</string>
    <string name="match_start_time_title">Started at</string>
    <string name="redact">Reduct</string>

    <!-- protocol activity -->
    <string name="protocol_tab_summary">summary</string>
    <string name="protocol_tab_goals">goals</string>
    <string name="protocol_tab_team1">team1</string>
    <string name="protocol_tab_team2">team2</string>
    <string name="protocol_tab_cards">cards</string>
    <string name="button_send">Send</string>

    <!-- player list -->
    <string name="is_captain">Captain</string>
    <string name="is_goalkeeper">Goalkeeper</string>

</resources>
