<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/screen_border_padding">
    <!--android:gravity="center"-->

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <Button android:id="@+id/button_login_fill"
        android:text="FILL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="fillLoginAndPassword"/>

    <EditText android:id="@+id/edit_text_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:hint="@string/edit_text_hint_login"
        android:inputType="textEmailAddress"/>

    <EditText android:id="@+id/edit_text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:hint="@string/edit_text_hint_password"
        android:inputType="textPassword"
        android:imeOptions="actionGo"/>

    <Button android:id="@+id/button_login_enter"
        android:text="@string/button_login_enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="login"/>


    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>